Use Stream Collector: joining to avoid unnecessary collection in a list.